--- a/Frontend/Task/app/package.json
+++ b/Frontend/Task/app/package.json
@@ -2,13 +2,21 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "description": "Exchange Rate Client",
+  "license": "SEE LICENSE IN LICENCE.txt",
   "dependencies": {
+    "axios": "^0.19.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
